Add myself as a maintainer

--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,9 @@
     "license": "BSD-3-Clause",
     "authors": [
         {
-            "name": "Woody Gilk",
-            "email": "woody.gilk@gmail.com",
-            "role": "developer"
+            "name": "Robbie Mackay",
+            "email": "robbie@ushahidi.com",
+            "role": "maintainer"
         },
         {
             "name": "Kohana Team",
